[package]
name = "wye"
version = "0.1.0"
authors = ["Gusto <inka.gusto@proton.me>"]
edition = "2024"
description = "Wye is reverse tee, simple multiplexer like tmux"
license = "MIT"

[dependencies]
mio = { version = "1", features = ["os-ext", "os-poll"] }
nix = { version = "0.30.1", features = ["fs", "ioctl", "process", "signal", "term"] }

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
