[package]
name = "wye"
version = "0.1.1"
authors = ["Gusto <inka.gusto@proton.me>"]
edition = "2024"
description = "Wye is reverse tee, simple multiplexer like tmux"
license = "MIT"

[dependencies]
nix = { version = "0.30.1", features = ["fs", "ioctl", "process", "signal", "term"] }
rustix = { version = "1", features = ["event"] }

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
